removed resolution and aggregation inputs since only avg for pm2.5 and max for o3
