# swagger_server/controllers/default_controller.py
@@ -17,7 +17,7 @@ sys.path.append(parser.get('sys-path', 'exposures'))
 sys.path.append(parser.get('sys-path', 'controllers'))
 
 
-def get_values(start_date, end_date, latitude, longitude, resolution=None, aggregation=None, utc_offset=None):  # noqa: E501
+def get_values(start_date, end_date, latitude, longitude, utc_offset=None):  # noqa: E501
     """CMAQ ozone (o3) and particulate matter (pm2.5) values
 
     By passing in the appropriate options, you can retrieve CMAQ o3 and pm2.5 values  # noqa: E501
@@ -30,10 +30,6 @@ def get_values(start_date, end_date, latitude, longitude, resolution=None, aggre
     :type latitude: str
     :param longitude: longitude in decimal degrees format, ie: -80.33
     :type longitude: str
-    :param resolution: temporal resolution (day, 7day, 14day) - default is day
-    :type resolution: str
-    :param aggregation: numerical aggregation (max, avg) - default is max
-    :type aggregation: str
     :param utc_offset: timezone offset from UTC (utc, eastern, central, mountain, pacific) - default is utc
     :type utc_offset: str
 
