# swagger_server/swagger/swagger.yaml
@@ -46,18 +46,6 @@ paths:
         description: "longitude in decimal degrees format, ie: -80.33"
         required: true
         type: "string"
-      - name: "resolution"
-        in: "query"
-        description: "temporal resolution (day, 7day, 14day) - default is day"
-        required: false
-        type: "string"
-        default: "day"
-      - name: "aggregation"
-        in: "query"
-        description: "numerical aggregation (max, avg) - default is max"
-        required: false
-        type: "string"
-        default: "max"
       - name: "utc_offset"
         in: "query"
         description: "timezone offset from UTC (utc, eastern, central, mountain, pacific)\
@@ -177,20 +165,6 @@ parameters:
     description: "longitude in decimal degrees format, ie: -80.33"
     required: true
     type: "string"
-  resolution:
-    name: "resolution"
-    in: "query"
-    description: "temporal resolution (day, 7day, 14day) - default is day"
-    required: false
-    type: "string"
-    default: "day"
-  aggregation:
-    name: "aggregation"
-    in: "query"
-    description: "numerical aggregation (max, avg) - default is max"
-    required: false
-    type: "string"
-    default: "max"
   utc_offset:
     name: "utc_offset"
     in: "query"
